extractor/tests/snapshots/test_inputs__passing__all_tags.lua-stdout.snap
---
source: tests/test-inputs.rs
expression: stdout
---
[
  {
    "functions": [
      {
        "name": "comingSoon",
        "desc": "",
        "params": [],
        "returns": [],
        "function_type": "static",
        "unreleased": true,
        "source": {
          "line": 53,
          "path": ""
        }
      }
    ],
    "properties": [
      {
        "name": "notReady",
        "desc": "",
        "lua_type": "boolean",
        "unreleased": true,
        "source": {
          "line": 73,
          "path": ""
        }
      }
    ],
    "types": [],
    "name": "Bar",
    "desc": "",
    "unreleased": true,
    "source": {
      "line": 25,
      "path": ""
    }
  },
  {
    "functions": [
      {
        "name": "new",
        "desc": "This function creates a new Foo",
        "params": [
          {
            "name": "a",
            "desc": "param a",
            "lua_type": "A A A"
          },
          {
            "name": "b",
            "desc": "param b",
            "lua_type": "B B B"
          },
          {
            "name": "promise",
            "desc": "external param",
            "lua_type": "Promise"
          }
        ],
        "returns": [
          {
            "desc": "return a",
            "lua_type": "a"
          },
          {
            "desc": "return b",
            "lua_type": "b"
          },
          {
            "desc": "return external type",
            "lua_type": "Promise"
          }
        ],
        "function_type": "static",
        "tags": [
          "uno",
          "dos"
        ],
        "errors": [
          {
            "lua_type": "c",
            "desc": "this errors sometimes. shrug"
          }
        ],
        "realm": [
          "Client",
          "Server"
        ],
        "since": "v1.23",
        "deprecated": {
          "version": "v1.5",
          "desc": "Use something else"
        },
        "private": true,
        "yields": true,
        "ignore": true,
        "source": {
          "line": 48,
          "path": ""
        }
      }
    ],
    "properties": [
      {
        "name": "ready",
        "desc": "",
        "lua_type": "boolean",
        "tags": [
          "salad",
          "fries",
          "nuggets"
        ],
        "realm": [
          "Client",
          "Server"
        ],
        "since": "v0.1.1",
        "deprecated": {
          "version": "v1.3",
          "desc": "Use blah"
        },
        "private": true,
        "readonly": true,
        "ignore": true,
        "source": {
          "line": 68,
          "path": ""
        }
      }
    ],
    "types": [
      {
        "name": "nilOrNumber",
        "desc": "Nil or number matey",
        "lua_type": "nil | number",
        "tags": [
          "arrgh",
          "yarr"
        ],
        "private": true,
        "ignore": true,
        "source": {
          "line": 84,
          "path": ""
        }
      },
      {
        "name": "Command",
        "desc": "An object describing a command",
        "fields": [
          {
            "name": "Name",
            "lua_type": "string",
            "desc": "the name of the command"
          },
          {
            "name": "Groups",
            "lua_type": "array<string>",
            "desc": "A list of groups that the command contains"
          },
          {
            "name": "Recursion",
            "lua_type": "Command",
            "desc": "This breaks the universe"
          },
          {
            "name": "Promise",
            "lua_type": "Promise",
            "desc": "This is a Promise"
          }
        ],
        "tags": [
          "cmdr",
          "lua"
        ],
        "private": true,
        "ignore": true,
        "source": {
          "line": 100,
          "path": ""
        }
      }
    ],
    "name": "Foo",
    "desc": "Here's a description for you\n\n::: info\nwith an admonition\n:::",
    "tags": [
      "bark",
      "meow",
      "rawr"
    ],
    "external_types": [
      {
        "name": "Promise",
        "url": "https://eryn.io/roblox-lua-promise/api/Promise"
      }
    ],
    "realm": [
      "Client",
      "Server",
      "Plugin"
    ],
    "deprecated": {
      "version": "v1.2",
      "desc": "Use x instead"
    },
    "since": "v1.0",
    "private": true,
    "ignore": true,
    "source": {
      "line": 21,
      "path": ""
    }
  }
]
