extractor/tests/snapshots/test_inputs__passing__drop_module.lua-stdout.snap
---
source: tests/test-inputs.rs
expression: stdout

---
[
  {
    "functions": [],
    "properties": [],
    "types": [],
    "name": "hi",
    "desc": "",
    "source": {
      "line": 3,
      "path": ""
    }
  }
]

